# PagesWebAssemblyTest

./: .gitignore  .gitmodules  .gitpod.yml  CMakeLists.txt  cpptools-1.9.7_vsixhub.com.vsix  index.html  push_to_page.sh  run.sh  script.js
.github/workflows/: main.yml
deploy/: index.html  script.js
deploy/wasm/: WASM_TEST.js  WASM_TEST.wasm
gitpod/: emsdk_setup.sh
src/: library.js  main.cpp
wasm/: WASM_TEST.js  WASM_TEST.wasm
wasm/wasm/: WASM_TEST.js  WASM_TEST.wasm  WASM_TEST_1.js
