cmake_minimum_required(VERSION 3.22)
project(WASM_TEST CXX)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../deploy/wasm)
file(GLOB_RECURSE SRC src/*.cpp src/*.hpp)
#target_compile_options(${PROJECT_NAME} PRIVATE -lembind)
add_executable(${PROJECT_NAME} ${SRC})
set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "-lembind -s ERROR_ON_UNDEFINED_SYMBOLS=0 --js-library /workspace/PagesWebAssemblyTest/src/library.js")